# guardian

./: .gitignore  Jenkinsfile  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setting.py  t.py  t1.py  t2.py  t3.py
basic/: Environment.py  exceptions.py  http_client.py
business/: cms_manage.py  crm_manage.py  instance.py  saas_manage.py  sfe_manage.py
cases/: conftest.py
cases/cms/faq/: test_add_faq.py  test_add_faq_category.py  test_faq_heat.py
cases/crm/: test_assit.py  test_call_process.py  test_visit.py
cases/crm/schedule/: __init__.py  test_call_process.py  test_call_process_create.py  test_visit.py
cases/sfe/flows/: test_find_flow_task.py  test_sales_list_query.py  test_upload_day_flow.py  test_upload_month_final_flow.py
cases/sfe/indicator/: test_indicator_list_query.py  test_indicator_upload.py
data/report_related/: daily_template.html  origin_report.json  report.json
data/test_upload_day_flow/: day_flow_template.xlsx  day_flow_template1.xlsx
db/: connection.py
taurus/: onecem_file_up.yaml
utils/: ceate_test_data.py  data_pool.py  dates.py  decorator.py  dingding.py  emails.py  excels.py  fakes.py  get_ini.py  get_path.py  paths.py  times.py
