[tool.poetry]
name = "guardian"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11"

allure-pytest = "2.13.2"
allure-python-commons = "2.13.2"
attrs = "23.2.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
colorama = "0.4.6"
et-xmlfile = "1.1.0"
exceptiongroup = "1.2.0"
execnet = "2.1.1"
Faker = "23.2.1"
idna = "3.6"
iniconfig = "2.0.0"
numpy = "1.26.3"
openpyxl = "3.1.2"
packaging = "23.2"
pandas = "2.1.4"
pluggy = "1.3.0"
pytest = "7.4.4"
pytest-xdist = "3.6.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
requests = "2.31.0"
simplejson = "3.19.2"
six = "1.16.0"
tomli = "2.0.1"
tzdata = "2023.4"
urllib3 = "2.1.0"


[tool.poetry.group.dev.dependencies]
dephell = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

